[gd_scene load_steps=8 format=2]

[ext_resource path="res://sprites/Sombrero.png" type="Texture" id=1]
[ext_resource path="res://Big Pixel Light demo.otf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Sombrero.gd" type="Script" id=3]
[ext_resource path="res://scenes/bakcground.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/buyNoise.tscn" type="PackedScene" id=5]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 180, 52 )

[sub_resource type="DynamicFont" id=3]
size = 18
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Sombrero" type="StaticBody2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 3 )

[node name="buyNoise" parent="." instance=ExtResource( 5 )]

[node name="bakcground" parent="." instance=ExtResource( 4 )]
margin_left = -39.0
margin_top = -44.0
margin_right = 321.0
margin_bottom = 60.0

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 141, 8 )
shape = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 4.5, 6.5 )
rotation = -0.189726
scale = Vector2( 0.161993, 0.159889 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 49.0
margin_top = -16.0
margin_right = 301.0
margin_bottom = 35.0
custom_fonts/font = SubResource( 3 )
text = "cost 10000
changes menu theme :)"

[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
